# exasol-personal

./: .ciignore  .editorconfig  .env  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .tflint.hcl  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  HOWTO_SETUP_AWS_ACCOUNT.md  HOWTO_SETUP_AZURE_ACCOUNT.md  HOWTO_SETUP_EXOSCALE_ACCOUNT.md  HOWTO_SETUP_HETZNER_ACCOUNT.md  HOWTO_SETUP_STACKIT_ACCOUNT.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES  Taskfile.yml  entitlements.plist  go.mod  go.sum  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
assets/: assets.go
doc/: architecture.md  ci.md  (+13 more)
tests/: CLAUDE.md  README.md  mock_version_server.py  pyproject.toml  testing.md
tests/framework/: deployment.py  launcher.py  outputs.py  types.py
tests/tests/: conftest.py  testcase_helpers.py
tests/tests/chaos/: test_faults.py  test_lifecycle_faults.py
tests/tests/deployment/: test-failure-ci.txt  test_custom.py  test_deploy_lifecycle.py  test_deploy_ops.py  test_local_deployment.py  test_local_vm.py  test_object_storage.py  test_slc.py  test_stackit.py  test_standard_deployment.py
tests/tests/deployment/assets/: people.csv
tests/tests/e2e/: __init__.py  conftest.py  test_cli_smoke.py  test_connect_query.py  test_connect_workflows.py  test_deploy_failures.py  test_deploy_idempotency.py  test_deploy_interrupt.py  test_deploy_outputs.py  test_destroy.py  test_failure_modes.py  test_import_large_csv.py  test_import_local_csv.py  test_ip_strategy.py  test_least_privilege_iam.py
tests/tests/fixtures/presets/configurable-no-resource/infra/: infrastructure.yaml  variables_public.tf
tests/tests/fixtures/presets/configurable-no-resource/install/: installation.yaml
tests/tests/fixtures/presets/named-no-resource-template/infra/: infrastructure.yaml
tests/tests/fixtures/presets/named-no-resource-template/install/: installation.yaml
tests/tests/integration/: __init__.py  conftest.py  helpers.py  test_backend.py  test_cache.py  test_cli.py  test_connect.py  test_connect_cli.py  test_deployment_directory_resolution.py  test_deployments_list.py  test_external_presets.py  test_init.py  test_install.py  test_launcher_framework.py  test_preset_config.py  test_presets.py  test_reconfiguration.py  test_version_check.py
(+879 files in other folders)
